# regex

./: .clang-format  .clang-tidy  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  Regex_8hpp.html  Regex_8hpp__incl.map  Regex_8hpp__incl.md5  Regex_8hpp_source.html  annotated.html  classes.html  classregex_1_1Regex-members.html  classregex_1_1Regex.html  dir_9b6e42c8fc95c43a225fa49877f8b335.html  files.html  functions.html  functions_func.html  graph_legend.html  index.html  main.cpp  namespaceregex.html  namespaces.html  notes.txt
.github/workflows/: CI.yml  PublishDocumentation.yml  doxygen-gh-pages.yml
catch/: CMakeLists.txt
cmake/: RegexConfig.cmake.in
docs/: CMakeLists.txt  install.md  learning.md  mainpage.md
fsm/: Bimap-inl.hpp  Bimap.hpp  CMakeLists.txt  DFA.cpp  DFA.hpp  EpsilonNFA.cpp  FSM.cpp  FSM.hpp  NFA.cpp  NFA.hpp
fsm/tests/: CMakeLists.txt  FSM_tests.cpp
include/regex/: Regex.hpp
regex/: CMakeLists.txt  Regex.cpp  Regex.hpp
regex/tests/: Regex_tests.cpp
search/: all_0.js  all_1.js  all_2.js  all_3.js  classes_0.js  files_0.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  namespaces_0.js  searchdata.js
src/: CMakeLists.txt
src/archive/: DisjoinOverlap_debug
src/automata/: Automata.hpp  Bimap-inl.hpp  Bimap.hpp  CMakeLists.txt  DFA.cpp  DFA.hpp  NFA.cpp  NFA.hpp
src/automata/tests/: CMakeLists.txt  fa_tests.cpp
src/fa/: Bimap-inl.hpp  Bimap.cpp  Bimap.hpp  CMakeLists.txt  DFA.cpp  DFA.hpp  FA.hpp  NFA.cpp  NFA.hpp  Readme
src/fa/tests/: CMakeLists.txt  fa_tests.cpp
src/regex/: AST.hpp  Alphabet.cpp  Alphabet.hpp  CMakeLists.txt  CharacterClassStream.cpp  CharacterClassStream.hpp  CodePoint.hpp  DFABuilder.cpp  DFABuilder.hpp  FSABuilder.cpp  FSABuilder.hpp  Parser-inl.hpp  Parser.cpp  Parser.hpp  Regex.cpp  Regex.hpp  ThompsonConstruction.cpp  ThompsonConstruction.hpp  TokenStream.cpp  TokenStream.hpp  Utf8Iterator.cpp  Utf8Iterator.hpp  astreal.hpp  basic_regex.hpp  dummy.cpp  match_results.hpp  regex_constants.hpp  regex_match.hpp  regex_traits.hpp  sub_match.hpp
src/regex/detail/: CMakeLists.txt  DFABuilder.cpp  DFABuilder.hpp  Regex.cpp  Regex.hpp  TokenStream.cpp  TokenStream.hpp
src/regex/detail/tests/: CMakeLists.txt  Regex_tests.cpp  ThompsonConstruction_test.cpp
src/regex/tests/: Alphabet_tests.cpp  CMakeLists.txt  Parser_test.cpp  Parser_tests.cpp  RegexMatch_tests.cpp  RegexSearch_tests.cpp  Regex_tests.cpp  ThompsonConstruction_test.cpp  TokenStream_test.cpp  basic_regex_tests.cpp  match_results_tests.cpp  regex_constants_tests.cpp  regex_match_tests.cpp  regex_traits_tests.cpp  sub_match_tests.cpp
tests/: Alphabet_tests.cpp  CMakeLists.txt  Parser_tests.cpp  RegexMatch_tests.cpp  RegexSearch_tests.cpp  Regex_tests.cpp
